[package]
name = "reqwest-compressed-body"
version = "0.1.0"
edition = "2021"
categories = ["web-programming::http-client", "compression"]
keywords = ["reqwest", "compressed", "body", "gzip"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/imp/reqwest-compressed-body"
description = "Easy way to emit compressed body via reqwest::RequestBuilder"

[dependencies]
reqwest = { version = "0.11", default-features = false }
async-compression = { version = "0.3", features = ["tokio"] }

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["macros"] }

[features]
json = ["reqwest/json"]
gzip = ["reqwest/gzip", "async-compression/gzip"]
blocking = ["reqwest/blocking"]
